# MSM-Android

./: .gitattributes  .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/etzwallet/: BreadApp.java
app/src/main/java/com/msmwallet/: BreadApp.java
app/src/main/java/com/platform/: APIClient.java  BRHTTPHelper.java  GeoLocationManager.java  HTTPServer.java  UserMetricsManager.java
app/src/main/jni/: Android.mk
app/src/main/jni/etzwallet-core/: BRAddress.c  BRAddress.h  BRArray.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP38Key.c  BRBIP38Key.h  BRBIP39Mnemonic.c  BRBIP39Mnemonic.h  BRBIP39WordsEn.h  BRBase58.c  BRBase58.h  BRBech32.c  BRBech32.h  BRBloomFilter.c  BRBloomFilter.h  BRChainParams.h  BRCrypto.c  BRCrypto.h  BRInt.h  BRKey.c  BRKey.h  BRKeyECIES.c  BRKeyECIES.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPaymentProtocol.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRSet.c  BRSet.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  LICENSE  README.md  (+1 more)
app/src/main/jni/etzwallet-core/Java/: BRCoreJni.c  BRCoreJni.h  Makefile  Notes  com_etzwallet_core_BRCoreAddress.c  com_etzwallet_core_BRCoreAddress.h  com_etzwallet_core_BRCoreChainParams.c  com_etzwallet_core_BRCoreChainParams.h  com_etzwallet_core_BRCoreJniReference.c  com_etzwallet_core_BRCoreJniReference.h  com_etzwallet_core_BRCoreKey.c  com_etzwallet_core_BRCoreKey.h  com_etzwallet_core_BRCoreMasterPubKey.c  com_etzwallet_core_BRCoreMasterPubKey.h  com_etzwallet_core_BRCoreMerkleBlock.c  com_etzwallet_core_BRCoreMerkleBlock.h  com_etzwallet_core_BRCorePaymentProtocol.c  com_etzwallet_core_BRCorePaymentProtocol.h  com_etzwallet_core_BRCorePaymentProtocolACK.h  com_etzwallet_core_BRCorePaymentProtocolDetails.h  com_etzwallet_core_BRCorePaymentProtocolEncryptedMessage.h  com_etzwallet_core_BRCorePaymentProtocolInvoiceRequest.h  com_etzwallet_core_BRCorePaymentProtocolMessage.h  com_etzwallet_core_BRCorePaymentProtocolPayment.h  com_etzwallet_core_BRCorePaymentProtocolPaymentACK.h  com_etzwallet_core_BRCorePaymentProtocolRequest.h  com_etzwallet_core_BRCorePeer.c  com_etzwallet_core_BRCorePeer.h  com_etzwallet_core_BRCorePeerManager.c  com_etzwallet_core_BRCorePeerManager.h  com_etzwallet_core_BRCoreTransaction.c  com_etzwallet_core_BRCoreTransaction.h  com_etzwallet_core_BRCoreTransactionInput.c  com_etzwallet_core_BRCoreTransactionInput.h  com_etzwallet_core_BRCoreTransactionOutput.c  com_etzwallet_core_BRCoreTransactionOutput.h  com_etzwallet_core_BRCoreWallet.c  com_etzwallet_core_BRCoreWallet.h
app/src/main/jni/etzwallet-core/bcash/: BRBCashAddr.c  BRBCashAddr.h  BRBCashParams.h
app/src/main/jni/etzwallet-core/ethereum/: BREthereum.c  BREthereum.h  BREthereumAccount.c  BREthereumAccount.h  BREthereumAccountState.c  BREthereumAccountState.h  BREthereumAmount.c  BREthereumAmount.h  BREthereumBase.h  BREthereumBlock.c  BREthereumBlock.h  BREthereumBloomFilter.c  BREthereumBloomFilter.h  BREthereumContract.c  BREthereumContract.h  BREthereumEther.c  BREthereumEther.h  BREthereumGas.c  BREthereumGas.h  BREthereumHash.c  BREthereumLightNode.c  BREthereumLightNode.h  BREthereumLightNodeAnnounce.c  BREthereumLightNodeListen.c  BREthereumLightNodePrivate.h  BREthereumLog.c  BREthereumLog.h  BREthereumNetwork.c  BREthereumNetwork.h  BREthereumPrivate.h  BREthereumToken.c  BREthereumToken.h  BREthereumTransaction.c  BREthereumTransaction.h  BREthereumTransactionReceipt.c  BREthereumTransactionReceipt.h  BREthereumWallet.c  BREthereumWallet.h  test.c
app/src/main/jni/msmwallet-core/: BRAddress.c  BRAddress.h  BRArray.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP38Key.c  BRBIP38Key.h  BRBIP39Mnemonic.c  BRBIP39Mnemonic.h  BRBIP39WordsEn.h  BRBase58.c  BRBase58.h  BRBech32.c  BRBech32.h  BRBloomFilter.c  BRBloomFilter.h  BRChainParams.h  BRCrypto.c  BRCrypto.h  BRInt.h  BRKey.c  BRKey.h  BRKeyECIES.c  BRKeyECIES.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPaymentProtocol.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRSet.c  BRSet.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  LICENSE  README.md  (+1 more)
app/src/main/jni/msmwallet-core/Java/: BRCoreJni.c  BRCoreJni.h  Makefile  Notes  com_msmwallet_core_BRCoreAddress.c  com_msmwallet_core_BRCoreAddress.h  (+32 more)
app/src/main/res/drawable/: bch_dialog_gradient.xml
app/src/main/res/layout/: activity_about.xml  activity_add_wallets.xml  activity_advanced.xml  activity_camera.xml  activity_currency_settings.xml  activity_disabled.xml  activity_display_currency.xml  activity_fingerprint.xml  activity_home.xml  activity_import.xml  activity_input_words.xml  activity_intro.xml  activity_intro_recover.xml  activity_manage_wallets.xml  activity_nodes.xml  activity_notification.xml  activity_paper_key.xml  activity_paper_key_prove.xml  activity_pin.xml  activity_pin_template.xml  activity_qr.xml  activity_restore.xml  activity_security_center.xml  activity_settings.xml  activity_share_data.xml  activity_spend_limit.xml  activity_sync_blockchain.xml  activity_wallet.xml  activity_web_view.xml  activity_write_down.xml  add_wallets_item.xml  bread_alert_dialog.xml  bread_spinner_item.xml  currency_list_item.xml  dialog_bch_welcome.xml  fingerprint_dialog_container.xml  fragment_bread_pin.xml  fragment_greetings.xml  fragment_manage.xml  fragment_menu.xml  (+23 more)
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/: PaperKeyTests.java
(+606 files in other folders)
